infra/deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whodistrod
  labels:
    name: whodistrod
spec:
  replicas: 1
  revisionHistoryLimit: 3
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 1000
    fsGroup: 1000
  selector:
    matchLabels:
      app: whodistrod
  template:
    metadata:
      labels:
        app: whodistrod
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - name: whodistrod
          image: whodistrod-image
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "50m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          ports:
            - containerPort: 8080
        - name: whodistrod-api
          image: whodistrod-api-image
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "50m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: whodistrod
spec:
  ports:
    - port: 8080
      targetPort: 8080

  selector:
    app: whodistrod
